--- a/ps4.Rmd
+++ b/ps4.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Psych 251 PS4: Simulation + Analysis'
-author: "Mike Frank"
+author: "Mike Frank, homework solutions by Philip Hernandez"
 date: "2019"
 output: 
   html_document:
@@ -15,29 +15,72 @@ For ease of reading, please separate your answers from our text by marking our t
 
 This part is a warmup, it should be relatively straightforward `ggplot2` practice.
 
+```{r}
+library(tidyverse)
+library(ggplot2)
+```
+
+
 Load data from Frank, Vul, Saxe (2011, Infancy), a study in which we measured infants' looking to hands in moving scenes. There were infants from 3 months all the way to about two years, and there were two movie conditions (`Faces_Medium`, in which kids played on a white background, and `Faces_Plus`, in which the backgrounds were more complex and the people in the videos were both kids and adults). An eye-tracker measured children's attention to faces. This version of the dataset only gives two conditions and only shows the amount of looking at hands (other variables were measured as well). 
 
 ```{r}
 fvs <- read_csv("data/FVS2011-hands.csv")
 ```
 
+
+
+```{r}
+head(fvs)
+```
+
+
 First, use `ggplot` to plot a histogram of the ages of children in the study. NOTE: this is a repeated measures design, so you can't just take a histogram of every measurement. 
 
 ```{r}
+fvs_unique <- fvs 
+
+fvs_unique <- distinct(fvs_unique, fvs_unique$subid, .keep_all = TRUE) #look for distinct values of subid 
+
+ggplot(fvs_unique, aes(age))+
+  geom_histogram(binwidth=1) + 
+  labs(title = "Age Distribution ", x = "Age(in months)", y = "Number of individuals")
 ```
 
 Second, make a scatter plot showing hand looking as a function of age and condition. Add appropriate smoothing lines. Take the time to fix the axis labels and make the plot look nice.
-
 ```{r}
+ggplot(fvs, aes(age, hand.look)) +
+  geom_point(aes(color = condition)) +
+  geom_smooth(aes(color = condition)) +
+  labs(title = "Age vs Hand Looking Time ", x = "Age(in months)", y = "Time spent looking to hands (in seconds)") +
+  ggthemes::theme_few() + 
+  ylim(0,0.35)
+
 ```
+
 
 What do you conclude from this pattern of data?
 
-> ANSWER HERE
+> The data suggest that after about the age of 12 months until 20 months, infants spent more time looking to hands in the Faces_Plus condition than in the Faces_Medium condition. Given the sparse sampling after 20 months and before 6 months, it is inappropriate to draw conclusions of those values.   
 
 What statistical analyses would you perform here to quantify these differences?
 
-> ANSWER HERE
+> I would conduct a regression analysis of the data, excluding the tails of the data where data is sparse. Using Hypothesis testing, this would allow me to determine whether the coefficients of the two conditions differ significantly.  
+
+```{r}
+ctl <- c(4.17,5.58,5.18,6.11,4.50,4.61,5.17,4.53,5.33,5.14)
+trt <- c(4.81,4.17,4.41,3.59,5.87,3.83,6.03,4.89,4.32,4.69)
+group <- gl(2, 10, 20, labels = c("Ctl","Trt"))
+weight <- c(ctl, trt)
+lm.D9 <- lm(weight ~ group)
+lm.D90 <- lm(weight ~ group - 1) # omitting intercept
+
+anova(lm.D9)
+summary(lm.D90)
+
+```
+
+
+
 
 
 # Part 2: Simulation
@@ -55,16 +98,42 @@ What's the proportion of "significant" results ($p < .05$) that you see?
 First do this using a `for` loop.
 
 ```{r}
+outcome = numeric(10000)
+
+for (i in 1:10000){
+  
+  sample <- t.test(rnorm(30))
+  
+  outcome[i] <-  sample$p.value
+  }
+
 ```
+
+
+```{r}
+num_significant <- sum(outcome <= 0.05)
+prop_significant <- num_significant/length(outcome)
+prop_significant
+```
+
+
 
 Next, do this using the `replicate` function:
 
 ```{r}
+p_values = numeric(10000)
+
+simulation_10000<- replicate(10000, rnorm(30))
+
+for (i in 1:10000){ttest_statistics <-t.test(simulation_10000)
+  p_values[i] <-  ttest_statistics$p.value
+}
+#not sure how to extract p-values from here
 ```
 
 How does this compare to the intended false-positive rate of $\alpha=0.05$?
 
-> ANSWER
+> It is quite similar, unable to get replicate function working though. 
 
 Ok, that was a bit boring. Let's try something more interesting - let's implement a p-value sniffing simulation, in the style of Simons, Nelson, & Simonsohn (2011).
 
@@ -74,17 +143,32 @@ First, write a function that implements this sampling regime.
 
 ```{r}
 double.sample <- function () {
+  num_of_experiments = 1
+  t_statistics <- t.test(rnorm(30))
+  while (t_statistics$p.value < 0.25 & t_statistics$p.value > 0.05){
+    num_of_experiments = num_of_experiments + 1
+    t_statistics <- t.test(rnorm(30))
+  }
+  return(t_statistics$p.value)
 }
 ```
+
+
 
 Now call this function 10k times and find out what happens. 
 
 ```{r}
+trial_no = numeric(10000)
+for (i in 1:10000){
+  trial_no[i]<- double.sample()
+}
+num_significant_double.sample <- sum(trial_no <= 0.05)
+
 ```
 
 Is there an inflation of false positives? How bad is it?
 
-> ANSWER
+> The false positive rate is now approaching 7%, it has inflated by about 38% given the values during my intial run number significant 491/10000 without double-sampling, with double-sampling 677/10000. 
 
 Now modify this code so that you can investigate this "double the sample" rule in a bit more depth. In the previous question, the researcher doubles the sample only when they think they got "close" to a significant result, i.e. when their not-significant p is less than 0.25. What if the researcher was more optimistic? See what happens in these 3 other scenarios:
 
@@ -99,8 +183,49 @@ HINT: Try to do this by making the function `double.sample` take the upper p val
 HINT 2: You may need more samples. Find out by looking at how the results change from run to run.
 
 ```{r}
+
+double.sample <- function (upper_p_val) {
+  num_of_experiments = 1
+  t_statistics <- t.test(rnorm(30))
+  while (t_statistics$p.value < upper_p_val & t_statistics$p.value > 0.05){
+    num_of_experiments = num_of_experiments + 1
+    t_statistics <- t.test(rnorm(30))
+  }
+  return(t_statistics$p.value)
+}
 ```
+
+```{r}
+trial_p_0.5 = numeric(10000)
+for (i in 1:10000){
+  trial_p_0.5[i]<- double.sample(0.5)
+}
+num_significant_double.sample_p0.5 <- sum(trial_p_0.5 <= 0.05)
+
+num_significant_double.sample_p0.5
+```
+
+```{r}
+trial_p_0.9 = numeric(10000)
+for (i in 1:10000){
+  trial_p_0.9[i]<- double.sample(0.9)
+}
+num_significant_double.sample_p0.9 <- sum(trial_p_0.9 <= 0.05)
+
+num_significant_double.sample_p0.9
+```
+
+```{r}
+trial_p_1 = numeric(10000)
+for (i in 1:10000){
+  trial_p_1[i]<- double.sample(1)
+}
+num_significant_double.sample_p1 <- sum(trial_p_1 <= 0.05)
+
+num_significant_double.sample_p1
+```
+
 
 What do you conclude on the basis of this simulation? How bad is this kind of data-dependent policy?
 
-> ANSWER
+> Significance for p<0.5, 0.9, 1 during first run through was 927/10000, 3374/10000, and 10000/10000 respectively. It means with ample repeated sampling, anything can eventually be 'significant.' 
